# CppWorkSapce

./: CMakeLists.txt  README.md  t1.cpp  t10.cpp  t11.cpp  t12.cpp  t13.cpp  t14.cpp  t15.cpp  t16.cpp  t17.cpp  t18.cpp  t19.cpp  t2.cpp  t20.cpp  t21.cpp  t22.cpp  t23.cpp  t24.cpp  t25.cpp  t26.cpp  t27.cpp  t28.cpp  t29.cpp  t3.cpp  t30.cpp  t31.cpp  t32.cpp  t33.cpp  t34.cpp  t35.cpp  t36.cpp  t37.cpp  t38.cpp  t39.cpp  t4.cpp  t40.cpp  t5.cpp  t6.cpp  t7.cpp  (+2 more)
speechDemo/: Speaker.h  SpeechManager.cpp  main.cpp  speechManager.h
