cmake_minimum_required(VERSION 3.17)
project(CWorkSpace)

set(CMAKE_CXX_STANDARD 20)
link_libraries(ws2_32)
add_executable(CWorkSpace t1.cpp)
add_executable(CWorkSpace_t t2.cpp)
add_executable(CWorkSpace_t3 t3.cpp)
add_executable(CWorkSpace_t4 t4.cpp)
add_executable(CWorkSpace_t5 t5.cpp)
add_executable(CWorkSpace_t6 t6.cpp)
add_executable(CWorkSpace_t7 t7.cpp)
add_executable(CWorkSpace_t8 t8.cpp)
add_executable(CWorkSpace_t9 t9.cpp)
add_executable(CWorkSpace_t10 t10.cpp)
add_executable(CWorkSpace_t11 t11.cpp)
add_executable(CWorkSpace_t12 t12.cpp)
add_executable(CWorkSpace_t13 t13.cpp)
add_executable(CWorkSpace_t14 t14.cpp)
add_executable(CWorkSpace_t15 t15.cpp)
add_executable(CWorkSpace_t16 t16.cpp)
add_executable(CWorkSpace_t17 t17.cpp)
add_executable(CWorkSpace_t18 t18.cpp)
add_executable(CWorkSpace_t19 t19.cpp)
add_executable(CWorkSpace_t20 t20.cpp)
add_executable(CWorkSpace_t21 t21.cpp)
add_executable(CWorkSpace_t22 t22.cpp)
add_executable(CWorkSpace_t23 t23.cpp)
add_executable(CWorkSpace_t24 t24.cpp)
add_executable(CWorkSpace_t25 t25.cpp)
add_executable(CWorkSpace_t26 t26.cpp)
add_executable(CWorkSpace_t27 t27.cpp)
add_executable(CWorkSpace_t28 t28.cpp)
add_executable(CWorkSpace_t29 t29.cpp)
add_executable(CWorkSpace_t30 t30.cpp)
add_executable(CWorkSpace_t31 t31.cpp)
add_executable(CWorkSpace_t32 t32.cpp)
add_executable(CWorkSpace_t33 t33.cpp)
add_executable(CWorkSpace_t34 t34.cpp)
add_executable(CWorkSpace_t35 t35.cpp)
add_executable(CWorkSpace_t36 t36.cpp)